--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,9 +18,10 @@
     color: var(--black-color);
 }
 
-.header .common {
+.header.header .common.common{
     display: flex;
     gap: 1.5rem;
+    color: black;
 }
 
 .search {
